--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.28.11",
+    "dotenv-webpack": "^1.5.7",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
