--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
     "img-loader": "^3.0.0",
+    "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.2",
     "prop-types": "^15.6.1",
