--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "webpack-prod": "webpack -p --progress --config=config/webpack.prod.js --mode production",
-    "webpack-dev": "webpack-dev-server --open --config=config/webpack.dev.js --mode development"
+    "webpack-dev": "webpack-dev-server --open --config=config/webpack.dev.js --mode development",
+    "scss-lint": "sass-lint -v --config=config/scss-lint.config.yml",
+    "scss-lint-fix": "sass-lint-auto-fix && npm run scss-lint",
+    "scss-full-lint": "npm run scss-lint && npm run scss-lint-fix",
+    "precommit": "npm run scss-full-lint",
+    "prepush": "npm run scss-full-lint"
   },
   "keywords": [],
   "author": "",
@@ -43,6 +48,8 @@
     "webpack-merge": "^4.1.3"
   },
   "devDependencies": {
+    "husky": "^0.14.3",
+    "sass-lint-auto-fix": "^0.11.1",
     "webpack-dev-server": "^3.1.4"
   }
 }
