--- a/package.json
+++ b/package.json
@@ -49,8 +49,12 @@
     "webpack-merge": "^4.1.3"
   },
   "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-plugin-react": "^7.10.0",
     "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
     "sass-lint-auto-fix": "^0.11.1",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "react-router-dom": "^4.2.2"
   }
 }
