--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "webpack-prod": "webpack -p --progress --config=config/webpack.prod.js --mode production",
     "webpack-dev": "webpack-dev-server --open --config=config/webpack.dev.js --mode development",
-    "scss-lint": "sass-lint -v --config=config/scss-lint.config.yml",
-    "scss-lint-fix": "sass-lint-auto-fix && npm run scss-lint",
+    "scss-lint": "sass-lint -v --config=sass-lint.config.yml",
+    "scss-lint-fix": "sass-lint-auto-fix",
     "scss-full-lint": "npm run scss-lint && npm run scss-lint-fix",
-    "precommit": "npm run scss-full-lint",
-    "prepush": "npm run scss-full-lint"
+    "precommit": "npm run scss-full-lint && eslint --fix .",
+    "prepush": "npm run scss-full-lint && eslint --fix ."
   },
   "keywords": [],
   "author": "",
