--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.3",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
@@ -54,7 +55,6 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "sass-lint-auto-fix": "^0.11.1",
-    "webpack-dev-server": "^3.1.4",
-    "react-router-dom": "^4.2.2"
+    "webpack-dev-server": "^3.1.4"
   }
 }
