--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack-merge": "^4.1.3"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "eslint": "^5.3.0",
     "eslint-plugin-react": "^7.10.0",
     "husky": "^0.14.3",
