--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.2",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.0",
     "react-loader-spinner": "^2.1.0",
@@ -57,6 +57,7 @@
     "eslint-plugin-react": "^7.10.0",
     "husky": "^0.14.3",
     "json-loader": "^0.5.7",
+    "babel-eslint": "^8.2.6",
     "redux-devtools-extension": "^2.13.5",
     "sass-lint-auto-fix": "^0.11.1",
     "webpack-dev-server": "^3.1.4"
