--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.0.1",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.9.1",
