--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv-webpack": "^1.5.7",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
+    "google-map-react": "^1.0.6",
     "html-loader": "^0.5.5",
     "i18n-react": "^0.6.4",
     "img-loader": "^3.0.0",
