--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-count-to": "^0.10.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
