--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.2",
     "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-count-to": "^0.10.0",
     "react-dom": "^16.4.0",
+    "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-slick": "^0.23.1",
