--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^16.4.1",
     "react-count-to": "^0.10.0",
     "react-dom": "^16.4.0",
+    "react-input-range": "^1.3.0",
     "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
