--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-select": "^2.0.0",
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
