--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -33,6 +34,7 @@
     "font-awesome": "^4.7.0",
     "google-map-react": "^1.0.6",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "i18n-react": "^0.6.4",
     "img-loader": "^3.0.0",
     "jquery": "^3.3.1",
@@ -44,6 +46,7 @@
     "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-autosuggest": "^9.4.0",
     "react-count-to": "^0.10.0",
     "react-dom": "^16.4.0",
     "react-iframe": "^1.2.0",
@@ -60,7 +63,6 @@
     "sass-loader": "^7.0.1",
     "slick-carousel": "^1.8.1",
     "style-loader": "^0.21.0",
-    "html-webpack-plugin": "^3.2.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4",
@@ -69,7 +71,6 @@
   "devDependencies": {
     "babel-eslint": "^8.2.6",
     "eslint": "^5.3.0",
-    "html-webpack-plugin": "^3.2.0",
     "eslint-plugin-react": "^7.10.0",
     "husky": "^0.14.3",
     "redux-devtools-extension": "^2.13.5",
