--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack-prod": "webpack -p --progress --config=config/webpack.prod.js --mode production",
-    "webpack-dev": "webpack-dev-server --open --config=config/webpack.dev.js --mode development",
+    "webpack-prod": "webpack -p --progress --config=webpack.prod.js --mode production",
+    "webpack-dev": "webpack-dev-server --open --config=webpack.dev.js --mode development",
     "scss-lint": "sass-lint -v --config=sass-lint.config.yml",
     "scss-lint-fix": "sass-lint-auto-fix",
     "scss-full-lint": "npm run scss-lint && npm run scss-lint-fix",
@@ -57,14 +57,14 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "json-loader": "^0.5.7"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "eslint": "^5.3.0",
     "eslint-plugin-react": "^7.10.0",
     "husky": "^0.14.3",
-    "json-loader": "^0.5.7",
     "babel-eslint": "^8.2.6",
     "redux-devtools-extension": "^2.13.5",
     "sass-lint-auto-fix": "^0.11.1",
