--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -27,6 +28,7 @@
     "bootstrap": "^4.1",
     "css-loader": "^0.28.11",
     "dotenv-webpack": "^1.5.7",
+    "ejs": "^2.6.1",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "google-map-react": "^1.0.6",
@@ -34,6 +36,7 @@
     "i18n-react": "^0.6.4",
     "img-loader": "^3.0.0",
     "jquery": "^3.3.1",
+    "json-loader": "^0.5.7",
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
     "moment": "^2.22.2",
@@ -44,28 +47,30 @@
     "react-count-to": "^0.10.0",
     "react-dom": "^16.4.0",
     "react-input-range": "^1.3.0",
+    "react-modal": "^3.5.1",
     "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-select": "^2.0.0",
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.0.1",
     "slick-carousel": "^1.8.1",
     "style-loader": "^0.21.0",
+    "underscore-template-loader": "^1.0.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4",
-    "webpack-merge": "^4.1.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "json-loader": "^0.5.7"
+    "webpack-merge": "^4.1.3"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "eslint": "^5.3.0",
     "eslint-plugin-react": "^7.10.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
-    "babel-eslint": "^8.2.6",
     "redux-devtools-extension": "^2.13.5",
     "sass-lint-auto-fix": "^0.11.1",
     "webpack-dev-server": "^3.1.4"
