--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^16.4.1",
     "react-count-to": "^0.10.0",
     "react-dom": "^16.4.0",
+    "react-iframe": "^1.2.0",
     "react-input-range": "^1.3.0",
     "react-modal": "^3.5.1",
     "react-moment": "^0.7.9",
