--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "sass-loader": "^7.0.1",
     "slick-carousel": "^1.8.1",
     "style-loader": "^0.21.0",
-    "underscore-template-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4",
@@ -69,8 +69,8 @@
   "devDependencies": {
     "babel-eslint": "^8.2.6",
     "eslint": "^5.3.0",
-    "eslint-plugin-react": "^7.10.0",
     "html-webpack-plugin": "^3.2.0",
+    "eslint-plugin-react": "^7.10.0",
     "husky": "^0.14.3",
     "redux-devtools-extension": "^2.13.5",
     "sass-lint-auto-fix": "^0.11.1",
