--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-select": "^2.0.0",
+    "react-share": "^2.3.1",
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
