--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "husky": "^0.14.3",
     "redux-devtools-extension": "^2.13.5",
     "sass-lint-auto-fix": "^0.11.1",
+    "shipit-cli": "^4.1.1",
+    "shipit-deploy": "^4.1.1",
     "webpack-dev-server": "^3.1.4"
   }
 }
