--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^16.4.0",
     "react-iframe": "^1.2.0",
     "react-input-range": "^1.3.0",
+    "react-meta-tags": "^0.6.0",
     "react-modal": "^3.5.1",
     "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
